fix text align

--- a/css/style.css
+++ b/css/style.css
@@ -135,9 +135,9 @@ header .search {
 .hero .aside .news1{
   /* height: 50%; */
   background-image:url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/tnw2020-feature_img-02.jpg);
-  background-size: cover
-  /* display: flex;
-  align-items: flex-end; */
+  background-size: cover;
+  display: flex;
+  align-items: flex-end;
 
 }
 
@@ -145,7 +145,7 @@ header .search {
   /* height: 50%; */
   background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/08/uber-lyft-ride-sharing-gig-prop-22-ride-hailing-future-ab5-california-car-taxi-796x448.jpg);
   background-size: cover;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content: flex-end; */
+  justify-content: flex-end;
 }
